--- a/src/main/resources/lang/lzh.yml
+++ b/src/main/resources/lang/lzh.yml
@@ -26,11 +26,16 @@ clientside:
       prev_page: "§e前頁"
       confirm_transaction_lore: "&7點此以確認交易"
       you_will_get: "&a君將得: {emc} EMC"
+      search: "§b寻物"
+      search_lore: "點此以尋物"
+      search_lore_current: "今寻: {search}"
     item_lore:
       emc_single: "§6EMC (單): {emc}"
       emc_stack: "§6EMC (疊): {stack_emc}"
       buy_one: "§7左擊購一"
       buy_stack: "§7右擊購 {amount}"
+    search_sign:
+      line1: "请于下方键入欲寻之物"
   alchemical_bag:
     name: "§f鍊金囊"
     default_name: "§f鍊金囊"
