--- a/src/main/resources/lang/en_us.yml
+++ b/src/main/resources/lang/en_us.yml
@@ -556,7 +556,8 @@ item.gem_boots.name: "§3Gem Boots"
 item.gem_boots.lore1: "§6§oIndestructible"
 item.gem_boots.lore2: "§7Grants slow falling and immunity to fall damage"
 item.gem_boots.lore3: "§7Double-tap space to fly, hold space to ascend"
-item.gem_boots.lore4: "§7Use /pe gemboots to toggle Step-Assist"
+item.gem_boots.lore4: "§7Water walking ability (like Frost Walker)"
+item.gem_boots.lore5: "§7Use /pe gemboots to toggle Step-Assist"
 item.gem_boots.autostep_on: "§7[§eProjectE§7] §aStep-Assist enabled"
 item.gem_boots.autostep_off: "§7[§eProjectE§7] §cStep-Assist disabled"
 
