--- a/src/main/resources/lang/lzh.yml
+++ b/src/main/resources/lang/lzh.yml
@@ -552,6 +552,7 @@ item.gem_boots.name: "§3颶風長靴"
 item.gem_boots.lore1: "§6§o堅不可摧"
 item.gem_boots.lore2: "§7自帶緩降及免疫摔傷"
 item.gem_boots.lore3: "§7雙擊空格起飛，長按空格爬升"
-item.gem_boots.lore4: "§7用 /pe gemboots 切換自動跳躍"
+item.gem_boots.lore4: "§7擁有水上行走能力（類似冰霜行者）"
+item.gem_boots.lore5: "§7用 /pe gemboots 切換自動跳躍"
 item.gem_boots.autostep_on: "§7[§eProjectE§7] §a自動跳躍已啟"
 item.gem_boots.autostep_off: "§7[§eProjectE§7] §c自動跳躍已閉"
