--- a/src/main/resources/lang/zh_cn.yml
+++ b/src/main/resources/lang/zh_cn.yml
@@ -553,6 +553,7 @@ item.gem_boots.name: "§3飓风长靴"
 item.gem_boots.lore1: "§6§o坚不可摧"
 item.gem_boots.lore2: "§7自带缓降和免疫摔落伤害"
 item.gem_boots.lore3: "§7双击空格起飞，长按空格爬升"
-item.gem_boots.lore4: "§7使用 /pe gemboots 切换自动跳跃"
+item.gem_boots.lore4: "§7拥有水上行走能力（类似冰霜行者）"
+item.gem_boots.lore5: "§7使用 /pe gemboots 切换自动跳跃"
 item.gem_boots.autostep_on: "§7[§eProjectE§7] §a自动跳跃已开启"
 item.gem_boots.autostep_off: "§7[§eProjectE§7] §c自动跳跃已关闭"
