--- a/src/main/resources/lang/zh_cn.yml
+++ b/src/main/resources/lang/zh_cn.yml
@@ -466,6 +466,18 @@ item:
   projecte.energy_condenser_mk2:
     name: "§c能量凝聚器 MK2"
     lore1: "§6一个更强大的能量凝聚器"
+  projecte.energy_collector_mk1:
+    name: "§e能量收集器 MK1"
+    lore1: "§6每秒产生 4 EMC（最高效率）"
+    lore2: "§7受上方方块亮度影响"
+  projecte.energy_collector_mk2:
+    name: "§b能量收集器 MK2"
+    lore1: "§6每秒产生 10 EMC（最高效率）"
+    lore2: "§7受上方方块亮度影响"
+  projecte.energy_collector_mk3:
+    name: "§c能量收集器 MK3"
+    lore1: "§6每秒产生 40 EMC（最高效率）"
+    lore2: "§7受上方方块亮度影响"
 
 # 插件相关
 plugin:
@@ -501,8 +513,24 @@ gui:
   condenser:
     title: "§e能量凝聚器"
     emc_display: "§6EMC: {emc}"
+    target_emc: "§6目标EMC: {value}"
+    remaining_emc: "§e剩余EMC: {value}"
+    progress: "§a进度: {value}"
   condenser_mk2:
     title: "§c能量凝聚器 MK2"
+  alchemical_chest:
+    title: "§e炼金术箱子 §7(第%page%/%total%页)"
+    prev_page: "§a← 上一页"
+    next_page: "§a下一页 →"
+    page_info: "§e第%page%页 / 共%total%页"
+  energy_collector_mk1:
+    title: "§e能量收集器 MK1"
+  energy_collector_mk2:
+    title: "§b能量收集器 MK2"
+  energy_collector_mk3:
+    title: "§c能量收集器 MK3"
+  energy_collector:
+    emc_display: "§6存储EMC: %emc%"
 
 no_lang_folder: "&c未找到语言文件夹 'lang'。"
 
