--- a/src/main/resources/lang/en_us.yml
+++ b/src/main/resources/lang/en_us.yml
@@ -534,6 +534,11 @@ gui:
     title: "§cEnergy Collector MK3"
   energy_collector:
     emc_display: "§6Stored EMC: %emc%"
+  projecte_give:
+    title: "§6ProjectE Items §7[Page %page%/%total%]"
+    prev_page: "§e◀ Previous Page"
+    next_page: "§eNext Page ▶"
+    close: "§cClose"
 
 no_lang_folder: "&cLanguage folder 'lang' not found."
 
